force-app/main/default/objects/Account/fields/Age_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Age_Calculator__c</fullName>
    <formula>((TODAY() - PersonBirthdate)/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>