force-app/main/default/objects/Account/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alias</label>
    <referenceTo>Alias__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>