force-app/main/default/objects/Account/fields/Anonymization_date__c.field-meta.xml
<CustomField>
    <fullName>Anonymization_date__c</fullName>
    <label>Anonymization date</label>
    <type>DateTime</type>
</CustomField>