force-app/main/default/objects/Account/fields/Anonymization_key__c.field-meta.xml
<CustomField>
    <fullName>Anonymization_key__c</fullName>
    <externalId>true</externalId>
    <label>Anonymization key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>