force-app/main/default/objects/Account/fields/Birthday_Cake_IMG__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Cake_IMG__c</fullName>
    <formula>IF(
 TECH_Birthday_Date__c = TODAY(),
  IMAGE(&quot;/resource/iconics/images/cakered2.png&quot;,&quot;red&quot;),

IF(
 AND(TECH_Birthday_Date__c - TODAY() &lt;= 7, TECH_Birthday_Date__c - TODAY() &gt; 0),
  IMAGE(&quot;/resource/iconics/images/cakeyellow2.png&quot;,&quot;yellow&quot;),

IF(
 AND(TECH_Birthday_Date__c - TODAY() &lt;= 14,TECH_Birthday_Date__c - TODAY() &gt;7),
  IMAGE(&quot;/resource/iconics/images/cakegreen2.png&quot;,&quot;green&quot;),

 &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Cake</label>
    <type>Text</type>
</CustomField>