force-app/main/default/objects/Account/fields/BoundToLineWorks__c.field-meta.xml
<CustomField>
    <fullName>BoundToLineWorks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BoundToLineWorks</label>
    <type>Checkbox</type>
</CustomField>