force-app/main/default/objects/Account/fields/BoundToLVLine__c.field-meta.xml
<CustomField>
    <fullName>BoundToLVLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BoundToLVLine</label>
    <type>Checkbox</type>
</CustomField>