force-app/main/default/objects/Account/fields/C360GoldenID__c.field-meta.xml
<CustomField>
    <fullName>C360GoldenID__c</fullName>
    <externalId>true</externalId>
    <label>C360 Golden ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>