force-app/main/default/objects/Account/fields/CA_Engaged__c.field-meta.xml
<CustomField>
    <fullName>CA_Engaged__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CA Engaged</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>