force-app/main/default/objects/Account/fields/Can_Be_Contacted_By_LVApp__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Contacted_By_LVApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Contacted By LVApp</label>
    <type>Checkbox</type>
</CustomField>