force-app/main/default/objects/Account/fields/D1M_Id__c.field-meta.xml
<CustomField>
    <fullName>D1M_Id__c</fullName>
    <externalId>true</externalId>
    <label>D1M Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>