force-app/main/default/objects/Account/fields/Days_to_event__c.field-meta.xml
<CustomField>
    <fullName>Days_to_event__c</fullName>
    <formula>MIN(
IF(MONTH(PersonBirthdate)=2 &amp;&amp; DAY(PersonBirthdate)=29,
IF(ISBLANK(
DATE(YEAR(TODAY()), MONTH(PersonBirthdate), DAY(PersonBirthdate)-1) - TODAY()
), 400, 
DATE(YEAR(TODAY()), MONTH(PersonBirthdate), DAY(PersonBirthdate)-1) - TODAY()
),
IF(ISBLANK(
DATE(YEAR(TODAY()), MONTH(PersonBirthdate), DAY(PersonBirthdate)) - TODAY()
), 400, 
DATE(YEAR(TODAY()), MONTH(PersonBirthdate), DAY(PersonBirthdate)) - TODAY()
))
,
IF(MONTH(Anniversary__pc)=2 &amp;&amp; DAY(Anniversary__pc)=29,
IF(ISBLANK(
DATE(YEAR(TODAY()), MONTH(Anniversary__pc), DAY(Anniversary__pc)-1) - TODAY()
), 400, 
DATE(YEAR(TODAY()), MONTH(Anniversary__pc), DAY(Anniversary__pc)-1) - TODAY()
),
IF(ISBLANK(
DATE(YEAR(TODAY()), MONTH(Anniversary__pc), DAY(Anniversary__pc)) - TODAY()
), 400, 
DATE(YEAR(TODAY()), MONTH(Anniversary__pc), DAY(Anniversary__pc)) - TODAY()
))
)</formula>
    <label>Days to event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>