force-app/main/default/objects/Account/fields/DREAMID__c.field-meta.xml
<CustomField>
    <fullName>DREAMID__c</fullName>
    <externalId>true</externalId>
    <label>DREAM Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>