force-app/main/default/objects/Account/fields/DreamIdMasterClient__c.field-meta.xml
<CustomField>
    <fullName>DreamIdMasterClient__c</fullName>
    <label>DreamId Master Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>