force-app/main/default/objects/Account/fields/ECO_ClientId__c.field-meta.xml
<CustomField>
    <fullName>ECO_ClientId__c</fullName>
    <description>ATG client id (used to do one webservice to create Account, Opportunity and SPO_FirmOrder__c)</description>
    <externalId>true</externalId>
    <label>Client Id (ATG lv.com)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>