force-app/main/default/objects/Account/fields/End_Engagement_date__c.field-meta.xml
<CustomField>
    <fullName>End_Engagement_date__c</fullName>
    <label>End Engagement date</label>
    <type>Date</type>
</CustomField>