force-app/main/default/objects/Account/fields/Engagement_date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_date__c</fullName>
    <label>Engagement date</label>
    <type>Date</type>
</CustomField>