force-app/main/default/objects/Account/fields/Error_RMSID__c.field-meta.xml
<CustomField>
    <fullName>Error_RMSID__c</fullName>
    <label>Error RMSID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>