force-app/main/default/objects/Account/fields/Flag_10K_12mr__c.field-meta.xml
<CustomField>
    <fullName>Flag_10K_12mr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag 10K 12mr</label>
    <type>Checkbox</type>
</CustomField>