force-app/main/default/objects/Account/fields/Flag_10K_YTM__c.field-meta.xml
<CustomField>
    <fullName>Flag_10K_YTM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag 10K calculated by One Data on YTD since May 2022</description>
    <label>Flag 10K YTM</label>
    <type>Checkbox</type>
</CustomField>