force-app/main/default/objects/Account/fields/Flag_50K__c.field-meta.xml
<CustomField>
    <fullName>Flag_50K__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag 50K calculated by One Data on YTD since May 2022</description>
    <label>Flag 50K</label>
    <type>Checkbox</type>
</CustomField>