force-app/main/default/objects/Account/fields/Gifts_offered_for_this_clilent__c.field-meta.xml
<CustomField>
    <fullName>Gifts_offered_for_this_clilent__c</fullName>
    <formula>HYPERLINK(&quot;/00Oi0000006b929?pv0=&quot;&amp; Id,&quot;Client gifts report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gifts offered for this client</label>
    <type>Text</type>
</CustomField>