force-app/main/default/objects/Account/fields/Ind_10K__c.field-meta.xml
<CustomField>
    <fullName>Ind_10K__c</fullName>
    <description>Indicator for clients that spent 10K Euros over the last year or clients that may purchase for 10K Euros this year</description>
    <label>Indic 10K</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>10K</fullName>
            </value>
            <value>
                <fullName>Potential 10K</fullName>
            </value>
            <value>
                <fullName>50K</fullName>
            </value>
            <value>
                <fullName>10K this year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>