force-app/main/default/objects/Account/fields/indic10KImg__c.field-meta.xml
<CustomField>
    <fullName>indic10KImg__c</fullName>
    <formula>IF(Segmentation_To_Display__c==&quot;50K&quot;, IMAGE(&quot;/resource/iconics/images/50K.png&quot;,&quot;50K&quot;,40,40),
IF(Segmentation_To_Display__c==&quot;50K YTD&quot;, IMAGE(&quot;/resource/iconics/images/50K_YTD.png&quot;,&quot;50K YTD&quot;,40,40),
IF(Segmentation_To_Display__c==&quot;10K&quot;, IMAGE(&quot;/resource/iconics/images/10K.png&quot;,&quot;10K&quot;,40,40),
IF(Segmentation_To_Display__c==&quot;10K this year&quot;, IMAGE(&quot;/resource/iconics/images/10K_this_year.png&quot;,&quot;10K this year&quot;,40,40),
IF(Segmentation_To_Display__c==&quot;10k lifestyle&quot;, IMAGE(&quot;/resource/iconics/images/10k_lifestyle.png&quot;,&quot;10k lifestyle&quot;,40,40),
IF(Segmentation_To_Display__c==&quot;Potential 10K&quot;, IMAGE (&quot;/resource/iconics/images/Potential10K.png&quot;,&quot;Potential 10K&quot;,40,40),null))))))</formula>
    <label>Indic10K</label>
    <type>Text</type>
</CustomField>