force-app/main/default/objects/Account/fields/indic_10K_rank__c.field-meta.xml
<CustomField>
    <fullName>indic_10K_rank__c</fullName>
    <label>indic 10K rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10k YTM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>