force-app/main/default/objects/Account/fields/IS_24_MTH_RTW__c.field-meta.xml
<CustomField>
    <fullName>IS_24_MTH_RTW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS 24 MTH RTW</label>
    <type>Checkbox</type>
</CustomField>