force-app/main/default/objects/Account/fields/IsDream__c.field-meta.xml
<CustomField>
    <fullName>IsDream__c</fullName>
    <formula>Owner.IsTechnicalUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Dream</label>
    <type>Checkbox</type>
</CustomField>