force-app/main/default/objects/Account/fields/IsLifestyle__c.field-meta.xml
<CustomField>
    <fullName>IsLifestyle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>10K Lifestyle: Clients who have spent 10K since the beginning of the Year (01/01) and who have bought at least one piece RTW and/or High End. But, did not reach 50K (in the last 12 months rolling ) yet.</description>
    <inlineHelpText>Clients who have spent 10K since the beginning of the Year (01/01) and who have bought at least one piece RTW and/or High End and have reached 50K in the last 12 months rolling should appear in 50K client segmentation.</inlineHelpText>
    <label>Is Lifestyle</label>
    <type>Checkbox</type>
</CustomField>