force-app/main/default/objects/Account/fields/LastCorporateOutreach__c.field-meta.xml
<CustomField>
    <fullName>LastCorporateOutreach__c</fullName>
    <label>Last Corporate Outreach</label>
    <summarizedField>Campaign_History__c.Activity_Date__c</summarizedField>
    <summaryForeignKey>Campaign_History__c.Client__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>