force-app/main/default/objects/Account/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <description>local that comes from LV.com or LV App in ATG format</description>
    <label>Local</label>
    <length>18</length>
    <type>Text</type>
</CustomField>