force-app/main/default/objects/Account/fields/masterC360GoldenID__c.field-meta.xml
<CustomField>
    <fullName>masterC360GoldenID__c</fullName>
    <label>Master C360 Golden ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>