force-app/main/default/objects/Account/fields/MasterClientSFID__c.field-meta.xml
<CustomField>
    <fullName>MasterClientSFID__c</fullName>
    <externalId>true</externalId>
    <label>Master Client SFID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>