force-app/main/default/objects/Account/fields/MK_Installation_Date_LVApp__c.field-meta.xml
<CustomField>
    <fullName>MK_Installation_Date_LVApp__c</fullName>
    <label>Installation Date LVApp</label>
    <type>DateTime</type>
</CustomField>