force-app/main/default/objects/Account/fields/MK_Last_Navigation_Date_LVApp__c.field-meta.xml
<CustomField>
    <fullName>MK_Last_Navigation_Date_LVApp__c</fullName>
    <label>Last Navigation Date LVApp</label>
    <type>DateTime</type>
</CustomField>