force-app/main/default/objects/Account/fields/Number_of_Aliases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Aliases__c</fullName>
    <label>Number of Aliases</label>
    <summaryForeignKey>Alias_Member__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>