force-app/main/default/objects/Account/fields/OPT_Id__c.field-meta.xml
<CustomField>
    <fullName>OPT_Id__c</fullName>
    <description>Used for TimeCapsule DataLoader</description>
    <externalId>true</externalId>
    <label>OPT Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>