force-app/main/default/objects/Account/fields/Owner_Default_Store__c.field-meta.xml
<CustomField>
    <fullName>Owner_Default_Store__c</fullName>
    <formula>Text(Owner.DefaultStore__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Default Store</label>
    <type>Text</type>
</CustomField>