force-app/main/default/objects/Account/fields/Parallel_Market_IMG__c.field-meta.xml
<CustomField>
    <fullName>Parallel_Market_IMG__c</fullName>
    <formula>IF(
ISPICKVAL(ParallelMarket_Status__pc, &quot;Red&quot;),
IMAGE(&quot;/resource/iconics/images/ParallelMarketRed.png&quot;,&quot;red&quot;,21,45),

IF(
ISPICKVAL(ParallelMarket_Status__pc, &quot;Orange&quot;),
IMAGE(&quot;/resource/iconics/images/ParallelMarketOrange.png&quot;,&quot;orange&quot;,23,35),

IF(
ISPICKVAL(ParallelMarket_Status__pc, &quot;Green&quot;),
IMAGE(&quot;/resource/iconics/images/ParallelMarketGreen.png&quot;,&quot;green&quot;,23,35),

IF(
ISPICKVAL(ParallelMarket_Status__pc, &quot;Blue&quot;),
IMAGE(&quot;/resource/iconics/images/ParallelMarketBlue.png&quot;,&quot;blue&quot;,23,35),

IMAGE(&quot;/resource/iconics/images/ParallelMarketGrey.png&quot;,&quot;grey&quot;,23,35)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client flag</label>
    <type>Text</type>
</CustomField>