force-app/main/default/objects/Account/fields/PeakSeasonPurge__c.field-meta.xml
<CustomField>
    <fullName>PeakSeasonPurge__c</fullName>
    <label>PeakSeasonPurge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>