force-app/main/default/objects/Account/fields/ProspectForDream__c.field-meta.xml
<CustomField>
    <fullName>ProspectForDream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean that indicates if a prospect is new or has been modified (except by DREAM). Set to 1 when a user creates or modifies it. When DREAM retrieves the record, resets the value to 0. Not used on clients</description>
    <label>Prospect for Dream</label>
    <type>Checkbox</type>
</CustomField>