force-app/main/default/objects/Account/fields/Relationship_Comment__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Comment__c</fullName>
    <description>Used to qualify relationships between clients</description>
    <label>Comment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>