force-app/main/default/objects/Account/fields/Relationships__c.field-meta.xml
<CustomField>
    <fullName>Relationships__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship between different accounts, since standard doesn&apos;t work for person account</description>
    <label>Relationships</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>