force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REPEATER 10K+</fullName>
                <label>Repeter 10K+</label>
            </value>
            <value>
                <fullName>REPEATER BELOW 10K</fullName>
                <label>Repeter below 10K</label>
            </value>
            <value>
                <fullName>ONE-TIMER</fullName>
                <label>One-Timer</label>
            </value>
            <value>
                <fullName>No Segmentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>