force-app/main/default/objects/Account/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <description>Calculated by One Data on 12 months rolling updated once a month</description>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10k_local</fullName>
            </value>
            <value>
                <fullName>10k_non_local</fullName>
            </value>
            <value>
                <fullName>potential_10k_local</fullName>
            </value>
            <value>
                <fullName>potential_10k_non_local</fullName>
            </value>
            <value>
                <fullName>No Segmentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>