force-app/main/default/objects/Account/fields/Segmentation_period__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_period__c</fullName>
    <label>Segmentation period</label>
    <length>8</length>
    <type>Text</type>
</CustomField>