force-app/main/default/objects/Account/fields/Segmentation_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_To_Display__c</fullName>
    <formula>IF(
    AND(
        NOT(OR(
            ISPICKVAL( Segmentation__c ,&quot;10k_local&quot;),
            ISPICKVAL( Segmentation__c ,&quot;10k_non_local&quot;))),
    Flag_50K__c = true),
    &quot;50K YTD&quot;,
IF(
    AND(
        OR(
            ISPICKVAL( Segmentation__c ,&quot;10k_local&quot;),
            ISPICKVAL( Segmentation__c ,&quot;10k_non_local&quot;)),
        Flag_50K__c = TRUE ),
    &quot;50K&quot;,
IF(
    IsLifestyle__c = TRUE,
    &quot;10k lifestyle&quot;,
IF(
    AND(
        OR(
            ISPICKVAL( Segmentation__c ,&quot;10k_local&quot;),
            ISPICKVAL( Segmentation__c ,&quot;10k_non_local&quot;)) ,
        Flag_10K_YTM__c = TRUE ),
    &quot;10K this year&quot;,
IF(
    AND(
        OR(
            ISPICKVAL(Segmentation__c , &quot;10k_local&quot;) ,
            ISPICKVAL( Segmentation__c ,&quot;10k_non_local&quot;) ) ,
            AND(Flag_50K__c = FALSE,Flag_10K_YTM__c = FALSE) ) ,
    &quot;10K&quot;,
IF(
    AND(
        OR(
            ISPICKVAL( Segmentation__c ,&quot;potential_10k_local&quot;),
            ISPICKVAL( Segmentation__c ,&quot;potential_10k_non_local&quot;)) ,
            OR(Flag_50K__c = FALSE,Flag_10K_YTM__c = FALSE) ),
    &quot;Potential 10K&quot;,
IF(
    ISPICKVAL(Typology__pc , &quot;Prospects&quot;),
    &quot;Prospects&quot;,
IF(
    ISPICKVAL( Segmentation__c ,&quot;No segmentation&quot;),
    &quot;No segmentation&quot;,
&quot;&quot;
) ) ) ) ) ) ) )</formula>
    <label>Segmentation To Display</label>
    <type>Text</type>
</CustomField>