force-app/main/default/objects/Account/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>20HeCard</fullName>
            </value>
            <value>
                <fullName>20MDeCard</fullName>
            </value>
            <value>
                <fullName>Client Service</fullName>
            </value>
            <value>
                <fullName>DREAM</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>KBRW</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>LineTaiwan</fullName>
            </value>
            <value>
                <fullName>LineThai</fullName>
            </value>
            <value>
                <fullName>LV&amp;exhiJap</fullName>
            </value>
            <value>
                <fullName>LV App</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>MyCC</fullName>
            </value>
            <value>
                <fullName>MyLV</fullName>
            </value>
            <value>
                <fullName>MyRepairs</fullName>
            </value>
            <value>
                <fullName>On App</fullName>
            </value>
            <value>
                <fullName>Online Appt</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>