force-app/main/default/objects/Account/fields/Status_RMSID__c.field-meta.xml
<CustomField>
    <fullName>Status_RMSID__c</fullName>
    <label>Status RMSID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>