force-app/main/default/objects/Account/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <label>Sub Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prestige</fullName>
            </value>
            <value>
                <fullName>VVIC</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>Aspiring Repeater</fullName>
            </value>
            <value>
                <fullName>Repeater</fullName>
            </value>
            <value>
                <fullName>Promising One Timer</fullName>
            </value>
            <value>
                <fullName>One Timer</fullName>
            </value>
            <value>
                <fullName>No Segmentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>