force-app/main/default/objects/Account/fields/Subscribed_to_Digital_Concierge__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_to_Digital_Concierge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribed to Digital Concierge</label>
    <type>Checkbox</type>
</CustomField>