force-app/main/default/objects/Account/fields/TECH_AttachedStoreCountry__c.field-meta.xml
<CustomField>
    <fullName>TECH_AttachedStoreCountry__c</fullName>
    <description>This field i used in Sharing Rule. It contains the same value of AttachedStoreCountry__pc.</description>
    <label>TECH_AttachedStoreCountry</label>
    <type>TextArea</type>
</CustomField>