force-app/main/default/objects/Account/fields/TECH_Birthday_Date__c.field-meta.xml
<CustomField>
    <fullName>TECH_Birthday_Date__c</fullName>
    <formula>DATE(YEAR(TODAY()), MONTH(PersonBirthdate), DAY( PersonBirthdate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Birthday Date</label>
    <type>Date</type>
</CustomField>