force-app/main/default/objects/Account/fields/TECH_CandidateToDeletion__c.field-meta.xml
<CustomField>
    <fullName>TECH_CandidateToDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accounts with CandidateToDeletion = true are sent to Dream for deletion. It concerns Accounts from Online Appointment.
Dream checks if OK to delete the account, if yes, Dream update field ToDelete to true in SF and deletion batch is launched.</description>
    <label>TECH_CandidateToDeletion</label>
    <type>Checkbox</type>
</CustomField>