force-app/main/default/objects/Account/fields/Tech_ClientField__c.field-meta.xml
<CustomField>
    <fullName>Tech_ClientField__c</fullName>
    <description>Information about the client record</description>
    <externalId>true</externalId>
    <label>Tech ClientField</label>
    <length>80</length>
    <type>Text</type>
</CustomField>