force-app/main/default/objects/Account/fields/TECH_ManualReassignmentDate__c.field-meta.xml
<CustomField>
    <fullName>TECH_ManualReassignmentDate__c</fullName>
    <description>Set the date when the account owner id is manually changed in Account</description>
    <label>Manual Reassignment date</label>
    <type>Date</type>
</CustomField>