force-app/main/default/objects/Account/fields/TECH_OwnerManuallyChanged__c.field-meta.xml
<CustomField>
    <fullName>TECH_OwnerManuallyChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to,true if the value of account owner id is manually changed in Account  and cannot be changed later by Dream</description>
    <label>TECH Owner Manually Changed</label>
    <type>Checkbox</type>
</CustomField>