force-app/main/default/objects/Account/fields/TECH_OwnerManuallyChangedForProspect__c.field-meta.xml
<CustomField>
    <fullName>TECH_OwnerManuallyChangedForProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Owner Manually Changed For Prospect</label>
    <type>Checkbox</type>
</CustomField>