force-app/main/default/objects/Account/fields/TECH_TEMP_ReassignedBYTCL__c.field-meta.xml
<CustomField>
    <fullName>TECH_TEMP_ReassignedBYTCL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_TEMP_ReassignedBYTCL</label>
    <type>Checkbox</type>
</CustomField>