force-app/main/default/objects/Account/fields/TECHPreferredCA__c.field-meta.xml
<CustomField>
    <fullName>TECHPreferredCA__c</fullName>
    <description>used in VOICE Case details page</description>
    <formula>IF(
Owner.IsTechnicalUser__c = true,
&quot;Not Assigned&quot;,
Owner.FirstName &amp; &quot; &quot; &amp;  Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Preferred CA</label>
    <type>Text</type>
</CustomField>