force-app/main/default/objects/Account/fields/ToDelete__c.field-meta.xml
<CustomField>
    <fullName>ToDelete__c</fullName>
    <label>To Delete</label>
    <length>30</length>
    <type>Text</type>
</CustomField>