force-app/main/default/objects/Account/fields/Upcoming_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Anniversary__c</fullName>
    <formula>IF(AND(NOT(OR( 
MOD( YEAR( TODAY() ), 400 ) = 0, 
AND( 
MOD( YEAR( TODAY() ), 4 ) = 0, 
MOD( YEAR( TODAY() ), 100 ) != 0 
) 
)), 
MONTH(Anniversary__pc ) = 2 &amp;&amp; DAY (Anniversary__pc ) = 29 
), 
OR( AND (DATEVALUE( 
TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp; 
TEXT( MONTH ( Anniversary__pc +1) ) &amp; &quot;-&quot; &amp; 
TEXT( DAY ( Anniversary__pc +1) ) 
) - TODAY() &lt; 56, 
DATEVALUE( 
TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp; 
TEXT( MONTH ( Anniversary__pc +1) ) &amp; &quot;-&quot; &amp; 
TEXT( DAY ( Anniversary__pc +1) ) 
) - TODAY() &gt;= 0 ), 
AND( 
DATEVALUE( 
TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp; 
TEXT( MONTH ( Anniversary__pc +1) ) &amp; &quot;-&quot; &amp; 
TEXT( DAY ( Anniversary__pc +1) ) 
) - TODAY() &lt; -308, 
DATEVALUE( 
TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp; 
TEXT( MONTH ( Anniversary__pc +1) ) &amp; &quot;-&quot; &amp; 
TEXT( DAY ( Anniversary__pc +1) ) 
) - TODAY() &lt; 0) 
), 
OR( AND (DATEVALUE( 
TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp; 
TEXT( MONTH ( Anniversary__pc ) ) &amp; &quot;-&quot; &amp; 
TEXT( DAY ( Anniversary__pc ) ) 
) - TODAY() &lt; 56, 
DATEVALUE( 
TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp; 
TEXT( MONTH ( Anniversary__pc ) ) &amp; &quot;-&quot; &amp; 
TEXT( DAY ( Anniversary__pc ) ) 
) - TODAY() &gt;= 0 ), 
AND( 
DATEVALUE( 
TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp; 
TEXT( MONTH ( Anniversary__pc ) ) &amp; &quot;-&quot; &amp; 
TEXT( DAY ( Anniversary__pc ) ) 
) - TODAY() &lt; -308, 
DATEVALUE( 
TEXT( YEAR ( TODAY() ) ) &amp; &quot;-&quot; &amp; 
TEXT( MONTH ( Anniversary__pc ) ) &amp; &quot;-&quot; &amp; 
TEXT( DAY ( Anniversary__pc ) ) 
) 
- TODAY() &lt; 0) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upcoming Anniversary</label>
    <type>Checkbox</type>
</CustomField>